--- a/crm/templates/crm/pages/apartments/apartments_list.html
+++ b/crm/templates/crm/pages/apartments/apartments_list.html
@@ -99,8 +99,8 @@
                             <td style="padding: 5px; min-width: 90px">
                                 <select class="form-select" name="debt" id="debt">
                                   <option hidden disabled selected value></option>
-                                  <option value="is_active">Есть долг</option>
-                                  <option value="new">Нет долга</option>
+                                  <option value="yes">Есть долг</option>
+                                  <option value="no">Нет долга</option>
                                 </select>
                             </td>
                             <td></td>
@@ -112,11 +112,26 @@
                                 <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">{{ apartment.section.name }}</td>
                                 <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">{{ apartment.floor.name }}</td>
                                 <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">{% if apartment.owner %}{{ apartment.owner.last_name }} {{ apartment.owner.first_name }} {{ apartment.owner.patronymic }}{% else %}(нет владельца){% endif %}</td>
-                                <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">(нет счета)</td>
-                                <td style="padding: 6px 5px 7px 4px; float: right">
+                                <td data-href="{% url 'apartment_detail' apartment.id %}" class="tr-link">
+                                    {% for personal_account in personal_accounts %}
+                                        {% if personal_account.apartment == apartment %}
+                                            {% if personal_account.balance > 0 %}
+                                                <span style="color: #00a65a">{{ personal_account.balance }}</span>
+                                            {% elif personal_account.balance < 0 %}
+                                                <span style="color: red">{{ personal_account.balance }}</span>
+                                            {% else %}
+                                                {{ personal_account.balance }}
+                                            {% endif %}
+                                        {% endif %}
+                                    {% endfor %}
+                                    {% if apartment.id not in idx %}
+                                        (нет счета)
+                                    {% endif %}
+                                </td>
+                                <td style="padding: 6px 5px 7px 4px">
                                     <div class="btn-group pull-right">
-                                        <a class="btn btn-default btn-sm" href="#" title="Редактировать" data-toggle="tooltip"><i class="fa fa-pencil-alt"></i></a>
-                                        <button type="button" class="btn btn-default btn-sm not-allowed" data-bs-toggle="modal" data-bs-target="#deleteModal-{{ forloop.counter }}"><i class="fa fa-trash-alt"></i></button>
+                                        <a class="btn btn-default btn-sm" href="{% url 'apartment_update' apartment.id %}" title="Редактировать" data-toggle="tooltip"><i class="fa fa-pencil-alt"></i></a>
+                                        <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal-{{ forloop.counter }}"><i class="fa fa-trash-alt"></i></button>
                                     </div>
                                 </td>
                             </tr>
@@ -173,7 +188,7 @@
           padding: 0,
           icon: 'success',
           width: 300,
-          html: '{% for message in messages %}{{ message }}{% endfor %}',
+          html: '{% for message in messages %}{% if message.tags == 'success' %}{{ message }}{% endif %}{% endfor %}',
           showConfirmButton: false,
           timer: 1500,
         })
