--- a/crm/templates/crm/pages/owners/owners_list.html
+++ b/crm/templates/crm/pages/owners/owners_list.html
@@ -169,7 +169,7 @@
                               <div class="modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
                                   <div class="modal-header bg-danger">
-                                    <h5 class="modal-title" id="deleteModal1Label-{{ forloop.counter }}">Подтверждение удаления</h5>
+                                    <h5 class="modal-title" id="deleteModalLabel-{{ forloop.counter }}">Подтверждение удаления</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                   </div>
                                   <form method="post" action="{% url 'owner_delete' owner.id %}">
