last version of the project (End MeterReadings, start Application)

--- a/crm/templates/crm/pages/apartments/apartment_create.html
+++ b/crm/templates/crm/pages/apartments/apartment_create.html
@@ -162,7 +162,12 @@
             $('.js-example-basic-single').select2({
                 placeholder: 'Выберите...',
                 width: '100%',
-                allowClear: true
+                allowClear: true,
+                language: {
+                    "noResults": function () {
+                        return 'Ничего не найдено.'
+                    }
+                }
             });
 
             $('.select-personal_account').select2({
