--- a/crm/templates/crm/pages/meter_readings/meter_reading_detail.html
+++ b/crm/templates/crm/pages/meter_readings/meter_reading_detail.html
@@ -31,7 +31,7 @@
     <div class="my-box" style="min-height: 0">
         <div class="container-fluid">
             <div style="text-align: right; margin-bottom: 5px; padding-top: 5px">
-                <a href="#" class="btn btn-primary" style="font-size: 14px; max-height: 34px">Редактировать показание</a>
+                <a href="{% url 'meter_reading_update' object.id %}" class="btn btn-primary" style="font-size: 14px; max-height: 34px">Редактировать показание</a>
             </div>
             <div class="dropdown-divider" style="border-color:lightgrey"></div>
             <div style="max-width: 500px; padding-bottom: 5px">
