--- a/crm/templates/crm/layout/base.html
+++ b/crm/templates/crm/layout/base.html
@@ -180,7 +180,7 @@
           {% endif %}
           {% if user.role.has_application %}
           <li class="nav-item">
-            <a href="#" class="nav-link {% block applications %}{% endblock %}">
+            <a id="applications" href="{% url 'applications_list' %}" {% block applications %}class="nav-link"{% endblock %}>
               <i class="fas fa-wrench" style="width: 23px"></i>
               <p style="color: #494949; font-size: 14px; font-weight: 600">
                 Заявки вызова мастера
