--- a/crm/templates/crm/pages/meter_readings/meter_readings_by_apartment_list.html
+++ b/crm/templates/crm/pages/meter_readings/meter_readings_by_apartment_list.html
@@ -25,7 +25,7 @@
 
 {% block content %}
     <div style="text-align: right; padding-right: 10px; padding-bottom: 10px">
-        <a href="#" class="btn btn-success">Добавить показание</a>
+        <a href="{% url 'meter_reading_create' %}?apartment_id={{ apartment.id }}" class="btn btn-success">Добавить показание</a>
     </div>
     <div class="my-box" style="min-height: 0">
         <div class="container-fluid">
@@ -124,11 +124,32 @@
                                 <td data-href="{% url 'meter_reading_detail' meter_reading.id %}" class="tr-link">{{ meter_reading.meter.unit }}</td>
                                 <td style="padding: 6px 5px 7px 4px">
                                     <div class="btn-group pull-right">
-                                        <a class="btn btn-default btn-sm" href="{% url 'meter_reading_detail' meter_reading.id %}" title="Редактировать" data-toggle="tooltip"><i class="fa fa-pencil-alt"></i></a>
+                                        <a class="btn btn-default btn-sm" href="{% url 'meter_reading_update' meter_reading.id %}" title="Редактировать" data-toggle="tooltip"><i class="fa fa-pencil-alt"></i></a>
                                         <button type="button" class="btn btn-default btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal-{{ forloop.counter }}"><i class="fa fa-trash-alt"></i></button>
                                     </div>
                                 </td>
                             </tr>
+                            <!-- Modal -->
+                            <div class="modal fade" id="deleteModal-{{ forloop.counter }}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="deleteModalLabel-{{ forloop.counter }}" aria-hidden="true">
+                              <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                  <div class="modal-header bg-danger">
+                                    <h5 class="modal-title" id="deleteModalLabel-{{ forloop.counter }}">Подтверждение удаления</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                  </div>
+                                  <form method="post" action="{% url 'meter_reading_delete' meter_reading.id %}">
+                                      {% csrf_token %}
+                                      <div class="modal-body">
+                                          Вы действительно хотите удалить показания счетчика <b>№{{ meter_reading }}</b>?
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                                        <button type="submit" class="btn btn-danger">Удалить</button>
+                                      </div>
+                                  </form>
+                                </div>
+                              </div>
+                            </div>
                         {% endfor %}
                     </tbody>
                 </table>
@@ -140,7 +161,6 @@
 {% endblock %}
 
 {% block script %}
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <script src="{% static 'crm/scripts/meter_readings/meter_readings_by_apartment_list.js' %}"></script>
