--- a/crm/templates/crm/pages/meter_readings/meter_readings_list.html
+++ b/crm/templates/crm/pages/meter_readings/meter_readings_list.html
@@ -6,18 +6,6 @@
         .sort-number:hover {
             cursor: pointer;
         }
-        .sort-house:hover {
-            cursor: pointer;
-        }
-        .sort-section:hover {
-            cursor: pointer;
-        }
-        .sort-floor:hover {
-            cursor: pointer;
-        }
-        .sort-owner:hover {
-            cursor: pointer;
-        }
         .hover-li:hover {
             background-color: lightgrey;
         }
@@ -105,8 +93,8 @@
                                 <td data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.meter.unit }}</td>
                                 <td style="padding: 6px 5px 7px 4px">
                                     <div class="btn-group pull-right">
-                                        <a class="btn btn-default btn-sm" href="#" title="Снять новое показание счетчика" data-toggle="tooltip"><i class="fa fa-tachometer-alt"></i></a>
-                                        <a class="btn btn-default btn-sm" href="#" title="Открыть историю показаний для счетчика" data-toggle="tooltip"><i class="fa fa-eye"></i></a>
+                                        <a class="btn btn-default btn-sm" href="{% url 'meter_reading_create' %}?apartment_id={{ meter_reading.apartment.id }}" title="Снять новое показание счетчика" data-toggle="tooltip"><i class="fa fa-tachometer-alt"></i></a>
+                                        <a class="btn btn-default btn-sm" href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" title="Открыть историю показаний для счетчика" data-toggle="tooltip"><i class="fa fa-eye"></i></a>
                                     </div>
                                 </td>
                             </tr>
