--- a/crm/templates/crm/pages/meter_readings/meter_readings_by_apartment_list.html
+++ b/crm/templates/crm/pages/meter_readings/meter_readings_by_apartment_list.html
@@ -167,6 +167,10 @@
     <script>
         // Filters
         init_data()
+        if (localStorage.counter) {
+            delete localStorage.counter
+            $('#form').submit()
+        }
         $('#clear').click(clear)
 
         $('input[name="input_date"]').daterangepicker({
