--- a/crm/templates/crm/pages/apartments/apartment_update.html
+++ b/crm/templates/crm/pages/apartments/apartment_update.html
@@ -32,11 +32,11 @@
         }
         .select2-container .select2-selection--single {
           height: 38px !important;
+          padding-left: 3px !important;
         }
         .select2-container--default .select2-selection--single .select2-selection__rendered {
           line-height: 28px !important;
           font-size: 16px !important;
-          margin-left: -7px !important;
         }
         .select2-container--default .select2-selection--single .select2-selection__arrow {
           height: 38px !important;
