--- a/crm/templates/crm/pages/meter_readings/meter_readings_list.html
+++ b/crm/templates/crm/pages/meter_readings/meter_readings_list.html
@@ -77,7 +77,7 @@
                         </tr>
                         {% for meter_reading in meter_readings %}
                             <tr>
-                                <td data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">
+                                <td data-meter="{{ meter_reading.meter.id }}" data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">
                                     {% for house in houses %}
                                         {% for section in house.sections.all %}
                                             {% if section.id == meter_reading.apartment.section.id %}
@@ -86,11 +86,11 @@
                                         {% endfor %}
                                     {% endfor %}
                                 </td>
-                                <td data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.apartment.section }}</td>
-                                <td data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.apartment.number }}</td>
-                                <td data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.meter }}</td>
-                                <td data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.expense }}</td>
-                                <td data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.meter.unit }}</td>
+                                <td data-meter="{{ meter_reading.meter.id }}" data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.apartment.section }}</td>
+                                <td data-meter="{{ meter_reading.meter.id }}" data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.apartment.number }}</td>
+                                <td data-meter="{{ meter_reading.meter.id }}" data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.meter }}</td>
+                                <td data-meter="{{ meter_reading.meter.id }}" data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.expense }}</td>
+                                <td data-meter="{{ meter_reading.meter.id }}" data-href="{% url 'meter_readings_by_apartment_list' %}?apartment_id={{ meter_reading.apartment.id }}" class="tr-link">{{ meter_reading.meter.unit }}</td>
                                 <td style="padding: 6px 5px 7px 4px">
                                     <div class="btn-group pull-right">
                                         <a class="btn btn-default btn-sm" href="{% url 'meter_reading_create' %}?apartment_id={{ meter_reading.apartment.id }}" title="Снять новое показание счетчика" data-toggle="tooltip"><i class="fa fa-tachometer-alt"></i></a>
@@ -111,6 +111,11 @@
 {% block script %}
     <script src="{% static 'crm/scripts/meter_readings/meter_readings_list.js' %}"></script>
     <script>
+        $('td').click(function (){
+            localStorage.meter = $(this).data('meter')
+            localStorage.counter = 1
+        })
+
         // Filters
         init_data()
         $('#clear').click(clear)
